[workspace]
members = ["server", "client", "hostsfile", "shared", "publicip", "netlink-request"]

# original settings
#[profile.release]
#codegen-units = 1
#opt-level = "s"
#lto = "fat"
#panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 